--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li><a href="banner.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="casestudies.html">Casestudies</a></li>
