--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="casestudies.html">Casestudies</a></li>
-          <li><a href="careers.html">Careers</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="services">Services</a></li>
+          <li><a href="casestudies">Casestudies</a></li>
+          <li><a href="careers">Careers</a></li>
+          <li><a href="contact">Contact</a></li>
         </ul>
         <a href="banner.html" class="logo">
           <img alt="Company Logo" src="images/logo3.png" />
