change multi urls

--- a/banner1.html
+++ b/banner1.html
@@ -59,7 +59,7 @@
         to revolutionize their industries through our innovative, cutting-edge software solutions.
       </p>
       <button class="bg-gray-800 text-white py-2 px-6 rounded-full">
-        <a href="banner.html">
+        <a href="banner">
         View projects
     </a>
       </button>
