--- a/qa.html
+++ b/qa.html
@@ -23,14 +23,14 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="banner.html" class="hover:text-orange-500 transition-colors">Home</a></li>
-        <li><a href="about.html" class="hover:text-orange-500 transition-colors">About</a></li>
-        <li><a href="services.html" class="hover:text-orange-500 transition-colors">Services</a></li>
-        <li><a href="casestudies.html" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
-        <li><a href="careers.html" class="hover:text-orange-500 transition-colors">Careers</a></li>
-        <li><a href="contact.html" class="hover:text-orange-500 transition-colors">Contact</a></li>
+        <li><a href="banner" class="hover:text-orange-500 transition-colors">Home</a></li>
+        <li><a href="about" class="hover:text-orange-500 transition-colors">About</a></li>
+        <li><a href="services" class="hover:text-orange-500 transition-colors">Services</a></li>
+        <li><a href="casestudies" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
+        <li><a href="careers" class="hover:text-orange-500 transition-colors">Careers</a></li>
+        <li><a href="contact" class="hover:text-orange-500 transition-colors">Contact</a></li>
       </ul>
-      <a href="index.html" class="logo">
+      <a href="home" class="logo">
         <img alt="Company Logo" src="images/logo3.png" />
       </a>
     </div>
@@ -158,7 +158,7 @@
     <div class="container mx-auto text-center">
       <h2 class="text-4xl font-bold mb-8" data-aos="fade-down">Ready to Ensure Quality?</h2>
       <p class="text-xl text-gray-300 mb-8" data-aos="fade-up">Book your free 30-minute chat with our experts now.</p>
-      <a href="contact.html" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full transition duration-300" data-aos="fade-up">Let's Get Started</a>
+      <a href="contact" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full transition duration-300" data-aos="fade-up">Let's Get Started</a>
     </div>
   </section>
 
