--- a/mobile.html
+++ b/mobile.html
@@ -45,7 +45,7 @@
           
           </p>
           <button class="bg-orange-500 text-white py-2 px-6 rounded-full ">
-            <a href="banner.html">
+            <a href="banner">
                 Get A FREE CONSULTATION
         </a>
           </button>
