--- a/mobileapp.html
+++ b/mobileapp.html
@@ -54,14 +54,14 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="banner.html" class="hover:text-orange-500 transition-colors">Home</a></li>
-        <li><a href="about.html" class="hover:text-orange-500 transition-colors">About</a></li>
-        <li><a href="services.html" class="hover:text-orange-500 transition-colors">Services</a></li>
-        <li><a href="casestudies.html" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
-        <li><a href="careers.html" class="hover:text-orange-500 transition-colors">Careers</a></li>
-        <li><a href="contact.html" class="hover:text-orange-500 transition-colors">Contact</a></li>
+        <li><a href="banner" class="hover:text-orange-500 transition-colors">Home</a></li>
+        <li><a href="about" class="hover:text-orange-500 transition-colors">About</a></li>
+        <li><a href="services" class="hover:text-orange-500 transition-colors">Services</a></li>
+        <li><a href="casestudies" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
+        <li><a href="careers" class="hover:text-orange-500 transition-colors">Careers</a></li>
+        <li><a href="contact" class="hover:text-orange-500 transition-colors">Contact</a></li>
       </ul>
-      <a href="banner.html" class="logo">
+      <a href="banner" class="logo">
         <img alt="Company Logo" src="images/logo3.png" />
       </a>
     </div>
@@ -73,7 +73,7 @@
     <div class="relative z-10 px-4">
       <h1 class="text-5xl md:text-6xl font-bold mb-6" data-aos="fade-down">Mobile App Development</h1>
       <p class="text-xl md:text-2xl mb-8" data-aos="fade-up">Designing intuitive, captivating mobile apps that engage users and amplify your brand's digital presence with cutting-edge technology</p>
-      <a href="../contact.html" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-full glow-on-hover" data-aos="fade-up" data-aos-delay="200">Start Your Journey with Us!</a>
+      <a href="../contact" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-full glow-on-hover" data-aos="fade-up" data-aos-delay="200">Start Your Journey with Us!</a>
     </div>
   </section>
 
@@ -115,7 +115,7 @@
         </div>
         <div class="cta-box" data-aos="fade-up" data-aos-delay="200">
           <h3 class="text-2xl font-bold mb-4">Seeking a Mobile App Solution?</h3>
-          <a href="../contact.html" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-full mt-4">Partner with Us Today!</a>
+          <a href="../contact" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-full mt-4">Partner with Us Today!</a>
         </div>
       </div>
     </div>
@@ -201,7 +201,7 @@
       <div class="max-w-3xl mx-auto">
         <h2 class="text-3xl font-bold mb-8" data-aos="fade-down">Book your free 30-minute chat with our experts now</h2>
         <p class="text-xl text-gray-300 mb-8" data-aos="fade-up">We're all about building lasting partnerships, and we're guessing you're on the same page.</p>
-        <a href="../contact.html" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full inline-block glow-on-hover" data-aos="fade-up">Let's Create Success Together!</a>
+        <a href="../contact" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full inline-block glow-on-hover" data-aos="fade-up">Let's Create Success Together!</a>
       </div>
     </div>
   </section>
