--- a/services.html
+++ b/services.html
@@ -23,14 +23,14 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="home.html" class="hover:text-orange-500 transition-colors">Home</a></li>
-        <li><a href="about.html" class="hover:text-orange-500 transition-colors">About</a></li>
-        <li><a href="services.html" class="hover:text-orange-500 transition-colors">Services</a></li>
-        <li><a href="casestudies.html" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
-        <li><a href="careers.html" class="hover:text-orange-500 transition-colors">Careers</a></li>
-        <li><a href="contact.html" class="hover:text-orange-500 transition-colors">Contact</a></li>
+        <li><a href="home" class="hover:text-orange-500 transition-colors">Home</a></li>
+        <li><a href="about" class="hover:text-orange-500 transition-colors">About</a></li>
+        <li><a href="services" class="hover:text-orange-500 transition-colors">Services</a></li>
+        <li><a href="casestudies" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
+        <li><a href="careers" class="hover:text-orange-500 transition-colors">Careers</a></li>
+        <li><a href="contact" class="hover:text-orange-500 transition-colors">Contact</a></li>
       </ul>
-      <a href="home.html" class="logo">
+      <a href="home" class="logo">
         <img alt="Company Logo" src="images/logo3.png" />
       </a>
     </div>
