change multiple urls

--- a/webdev.html
+++ b/webdev.html
@@ -54,7 +54,7 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="banner" class="hover:text-orange-500 transition-colors">Home</a></li>
+        <li><a href="home" class="hover:text-orange-500 transition-colors">Home</a></li>
         <li><a href="about" class="hover:text-orange-500 transition-colors">About</a></li>
         <li><a href="services" class="hover:text-orange-500 transition-colors">Services</a></li>
         <li><a href="casestudies" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
