style/color changes about&services pages

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 
-<body class="bg-gray-900 text-white">
+<body class="bg-white text-black">
   <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-container container">
@@ -73,10 +73,10 @@
 
   <!-- Hero Section -->
   <section class="relative h-[60vh] flex items-center justify-center bg-cover bg-center parallax" style="background-image: url('images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg');">
-    <div class="absolute inset-0 bg-gradient-to-r from-black via-transparent to-black opacity-70"></div>
+    <div class="absolute inset-0 bg-gradient-to-r from-white via-transparent to-white opacity-70"></div>
     <div class="relative z-10 text-center" data-aos="zoom-in" data-aos-duration="1000">
-      <h1 class="text-6xl font-extrabold mb-4 text-white text-shadow">About Us</h1>
-      <p class="text-2xl text-gray-300 slide-in">From humble roots to your premier software development partner, blending innovation with human-centric solutions.</p>
+      <h1 class="text-6xl font-extrabold mb-4 text-black text-shadow">About Us</h1>
+      <p class="text-2xl text-gray-800 slide-in">From humble roots to your premier software development partner, blending innovation with human-centric solutions.</p>
       <button onclick="window.location.href='https://calendly.com/login'" class="mt-8 bg-orange-500 hover:bg-orange-600 text-white px-8 py-4 rounded-full text-lg font-bold transition-all duration-300 transform hover:scale-105">
         Let us help you
       </button>
@@ -89,7 +89,7 @@
       <!-- Mission Statement -->
       <div class="text-center mb-20" data-aos="fade-up">
         <h2 class="text-4xl font-bold mb-8 text-orange-500">Our Mission</h2>
-        <p class="text-xl text-gray-300 leading-relaxed max-w-4xl mx-auto">
+        <p class="text-xl text-gray-800 leading-relaxed max-w-4xl mx-auto">
           Empowering companies and organizations with visionary technology solutions, driving exponential growth through our dedicated team of passionate engineers and seasoned solution providers.
         </p>
       </div>
@@ -97,24 +97,24 @@
       <!-- Company Introduction -->
       <div class="mb-20">
         <div class="text-center mb-16" data-aos="fade-up">
-          <p class="text-xl text-gray-300 leading-relaxed max-w-4xl mx-auto">
+          <p class="text-xl text-gray-800 leading-relaxed max-w-4xl mx-auto">
             Established in 2010, TekJin is a trendsetter in developing transformative digital products for businesses of all sizes. With a steadfast commitment to reliability, we take pride in crafting and maintaining every app, website, mobile solution, widget, e-commerce tool, and enterprise portal with precision and passion. At TekJin, we believe in our products' enduring quality and craftsmanship, ensuring they exceed expectations and stand the test of time.
           </p>
         </div>
 
         <!-- Stats -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-16">
-          <div class="text-center p-8 bg-gray-800 rounded-xl" data-aos="fade-up">
+          <div class="text-center p-8 bg-gray-100 rounded-xl" data-aos="fade-up">
             <h3 class="text-4xl font-bold text-orange-500 mb-2">500+</h3>
-            <p class="text-gray-300">Satisfied Clients</p>
+            <p class="text-gray-800">Satisfied Clients</p>
           </div>
-          <div class="text-center p-8 bg-gray-800 rounded-xl" data-aos="fade-up" data-aos-delay="200">
+          <div class="text-center p-8 bg-gray-100 rounded-xl" data-aos="fade-up" data-aos-delay="200">
             <h3 class="text-4xl font-bold text-orange-500 mb-2">1000+</h3>
-            <p class="text-gray-300">Quality Projects Delivered</p>
+            <p class="text-gray-800">Quality Projects Delivered</p>
           </div>
-          <div class="text-center p-8 bg-gray-800 rounded-xl" data-aos="fade-up" data-aos-delay="400">
+          <div class="text-center p-8 bg-gray-100 rounded-xl" data-aos="fade-up" data-aos-delay="400">
             <h3 class="text-4xl font-bold text-orange-500 mb-2">50+</h3>
-            <p class="text-gray-300">Client Countries</p>
+            <p class="text-gray-800">Client Countries</p>
           </div>
         </div>
       </div>
@@ -122,11 +122,11 @@
       <!-- Vision Section -->
       <div class="mb-20">
         <h2 class="text-4xl font-bold text-center mb-8 text-orange-500" data-aos="fade-down">Our Vision</h2>
-        <div class="bg-gray-800 p-8 rounded-xl" data-aos="fade-up">
-          <p class="text-gray-300 text-lg leading-relaxed mb-6">
+        <div class="bg-gray-100 p-8 rounded-xl" data-aos="fade-up">
+          <p class="text-gray-800 text-lg leading-relaxed mb-6">
             In the dynamic landscape of technology, TekJin has been crafting digital solutions for over a decade. We know that navigating the complexities of digital systems can sometimes feel like trying to herd cats. As the world morphs into a connected global village, our vision stretches far beyond the horizon. We don't just keep up with change; we ride it like a tech-savvy surfer on the crest of a wave. Our goal is to transform IT solutions into smart, nimble, and AI-enhanced digital masterpieces.
           </p>
-          <p class="text-gray-300 text-lg leading-relaxed">
+          <p class="text-gray-800 text-lg leading-relaxed">
             Our commitment is to lead the charge in digital transformation, providing agile and innovative services to clients across the globe. In these times of rapid change, our ever-expanding team of tech wizards is driving the IT world toward a future where innovation meets the evolving demands of the digital age. We're not just keeping pace with the future; we're setting the tempo, ensuring that our clients are always one step ahead of the curve.
           </p>
         </div>
@@ -136,21 +136,21 @@
       <div class="mb-20">
         <h2 class="text-4xl font-bold text-center mb-12 text-orange-500" data-aos="fade-down">Our Cherished Values</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-          <div class="bg-gray-800 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up">
+          <div class="bg-gray-100 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up">
             <h3 class="text-xl font-bold mb-3 text-orange-500">Human-Centric Innovation</h3>
-            <p class="text-gray-300">We create technologies that improve human experiences.</p>
+            <p class="text-gray-800">We create technologies that improve human experiences.</p>
           </div>
-          <div class="bg-gray-800 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="200">
+          <div class="bg-gray-100 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="200">
             <h3 class="text-xl font-bold mb-3 text-orange-500">Adaptable Integrity</h3>
-            <p class="text-gray-300">We uphold evolving ethical standards in a changing tech landscape.</p>
+            <p class="text-gray-800">We uphold evolving ethical standards in a changing tech landscape.</p>
           </div>
-          <div class="bg-gray-800 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="400">
+          <div class="bg-gray-100 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="400">
             <h3 class="text-xl font-bold mb-3 text-orange-500">Playful Professionalism</h3>
-            <p class="text-gray-300">We merge creativity and joy with rigorous professionalism.</p>
+            <p class="text-gray-800">We merge creativity and joy with rigorous professionalism.</p>
           </div>
-          <div class="bg-gray-800 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="600">
+          <div class="bg-gray-100 p-6 rounded-lg hover-scale glow-on-hover" data-aos="fade-up" data-aos-delay="600">
             <h3 class="text-xl font-bold mb-3 text-orange-500">Sustainable Scalability</h3>
-            <p class="text-gray-300">We develop efficient, eco-friendly solutions for sustainable growth.</p>
+            <p class="text-gray-800">We develop efficient, eco-friendly solutions for sustainable growth.</p>
           </div>
         </div>
       </div>
