--- a/index.html
+++ b/index.html
@@ -47,20 +47,19 @@
       <div class="absolute inset-0 bg-gray-200 opacity-70"></div>
       <div class="container mx-auto px-4 relative">
         <div class="text-center p-4" data-aos="fade-up">
-          <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold mb-6 tracking-tight font-sans text-black">
-            TRANSFORMING VISIONS INTO MARKET LEADING SOFTWARE.
+          <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold mb-6 tracking-tight font-sans text-[#0c5b91]">
+            Making Intangible Ideas Visible
           </h1>
           <p class="text-base sm:text-lg md:text-xl lg:text-2xl mb-8 text-gray-800">
-            We're a collective of elite developers who've empowered 1000+ to revolutionize their industries through our
-            innovative, cutting-edge software solutions.
+            A team of elite developers bringing intangible ideas to life — helping 1000+ businesses lead their industries.
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
             <a href="https://calendly.com/login"
-              class="text-black bg-gradient-to-r from-orange-200 via-orange-300 to-orange-400 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-orange-200 dark:focus:ring-orange-400 font-medium rounded-full text-sm sm:text-base md:text-lg lg:text-xl px-6 py-3 sm:px-8 sm:py-4 md:px-10 md:py-5 text-center shadow-xl transform hover:scale-105 transition-all duration-200 border-2 border-orange-200 hover:border-orange-100 uppercase tracking-wide">
-              Wanna Talk?
+              class="text-black bg-transparent  hover:bg-gradient-to-br from-orange-200 via-orange-300 to-orange-400 focus:ring-4 focus:outline-none focus:ring-orange-200 dark:focus:ring-orange-400 font-medium rounded-full text-sm sm:text-base md:text-lg lg:text-xl px-6 py-3 sm:px-8 sm:py-4 md:px-10 md:py-5 text-center shadow-xl transform hover:scale-105 transition-all duration-200 border-2 border-[#0c5b91] hover:border-orange-100 uppercase tracking-wide">
+              Let's Brainstorm
             </a>
             <a href="projects.html"
-              class="text-black bg-transparent hover:bg-orange-300 font-medium rounded-full text-sm sm:text-base md:text-lg lg:text-xl px-6 py-3 sm:px-8 sm:py-4 md:px-10 md:py-5 text-center shadow-xl transform hover:scale-105 transition-all duration-200 border-2 border-orange-200 hover:border-orange-100 uppercase tracking-wide">
+              class="text-black bg-transparent hover:bg-orange-300 font-medium rounded-full text-sm sm:text-base md:text-lg lg:text-xl px-6 py-3 sm:px-8 sm:py-4 md:px-10 md:py-5 text-center shadow-xl transform hover:scale-105 transition-all duration-200 border-2 border-[#0c5b91] hover:border-orange-100 uppercase tracking-wide">
               View Projects
             </a>
           </div>
@@ -70,7 +69,7 @@
     <!-- Our Esteemed Clients Section -->
     <section class="py-16 px-4">
       <div class="container mx-auto text-center" data-aos="fade-up">
-        <h2 class="text-4xl font-bold mb-12 text-transparent bg-clip-text bg-gradient-to-r from-orange-200 to-orange-400">Our Trusted Partners</h2>
+        <h2 class="text-4xl font-bold mb-12 text-[#0c5b91]">Our Trusted Partners</h2>
         <div class="overflow-hidden">
           <div class="flex items-center justify-center animate-marquee space-x-8">
             <img src="images/etisalat-logo.svg" alt="Microsoft" class="h-16 w-auto">
@@ -95,7 +94,7 @@
     <!-- The TekJin Paradigm Section -->
     <section class="py-16 px-4 bg-gray-100">
       <div class="container mx-auto max-w-4xl" data-aos="fade-up">
-        <h2 class="text-4xl font-bold mb-8 text-center text-transparent bg-clip-text bg-gradient-to-r from-orange-200 to-orange-400">The TekJin Paradigm</h2>
+        <h2 class="text-4xl font-bold mb-8 text-center text-[#0c5b91]">The TekJin Paradigm</h2>
         <p class="text-gray-800 text-lg leading-relaxed text-center">
           Established in 2010, TekJin is a trendsetter in developing transformative digital products for businesses of all sizes. With a steadfast commitment to reliability, we take pride in crafting and maintaining every app, website, mobile solution, widget, e-commerce tool, and enterprise portal with precision and passion. At TekJin, we believe in our product enduring quality and craftsmanship, ensuring they exceed expectations and stand the test of time.
         </p>
@@ -103,9 +102,9 @@
     </section>
 
     <section class="container mx-auto px-4 py-12 md:py-16 lg:py-20">
-      <div class="flex flex-col lg:flex-row min-h-[60vh] lg:min-h-[80vh] gap-8">
+      <div class="flex flex-col gap-8">
         <!-- Left Section (Image) -->
-        <div class="w-full lg:w-1/2 flex items-center justify-center relative min-h-[40vh] lg:min-h-full group overflow-hidden rounded-2xl shadow-2xl"
+        <div class="w-full flex items-center justify-center relative min-h-[40vh] lg:min-h-full group overflow-hidden rounded-2xl shadow-2xl"
           data-aos="fade-right" data-aos-duration="800">
           <div
             class="absolute inset-0 bg-gradient-to-br from-white via-white to-orange-100 opacity-60 transition-opacity duration-500 group-hover:opacity-40">
@@ -117,9 +116,9 @@
             src="https://storage.googleapis.com/a1aa/image/coqcx6lUHo7oA595ZZlpvrDEDRfbCHSV1KA5ENu4fKSNeiNnA.jpg"
             width="500" />
           <div
-            class="relative z-10 p-8 md:p-10 lg:p-12 text-center lg:text-left transform transition-all duration-500 group-hover:translate-y-[-12px] backdrop-blur-sm bg-white/20 rounded-xl border border-orange-200/20">
+            class="relative z-10 p-8 md:p-10 lg:p-12 text-center transform transition-all duration-500 group-hover:translate-y-[-12px] backdrop-blur-sm bg-white/20 rounded-xl border border-orange-200/20">
             <h1
-              class="text-4xl md:text-5xl lg:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-orange-200 via-orange-300 to-orange-400 mb-6 tracking-tight animate-gradient">
+              class="text-4xl md:text-5xl lg:text-6xl font-bold text-[#0c5b91] mb-6 tracking-tight animate-gradient">
               Partner With Us
             </h1>
             <p
@@ -133,7 +132,7 @@
         </div>
 
         <!-- Right Section (Cards) -->
-        <div class="w-full lg:w-1/2 flex flex-col justify-center p-4 md:p-6 lg:p-8 space-y-6 md:space-y-8" data-aos="fade-left">
+        <div class="w-full flex flex-col justify-center p-4 md:p-6 lg:p-8 space-y-6 md:space-y-8" data-aos="fade-left">
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 md:gap-6 lg:gap-8">
             <!-- Card 1 -->
             <div class="bg-gray-100 p-4 md:p-6 rounded-lg shadow-lg relative overflow-hidden group hover:scale-105 transition-transform duration-300"
@@ -258,7 +257,7 @@
       <div class="absolute inset-0 bg-gradient-to-br from-white/80 via-white/70 to-transparent"></div>
 
       <div class="container mx-auto px-4 relative z-10">
-        <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 text-transparent bg-clip-text bg-gradient-to-r from-orange-200 to-orange-400">
+        <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 text-[#0c5b91]">
           What Our Clients Say
         </h2>
 
@@ -461,7 +460,7 @@
       <div class="w-full px-4 grid grid-cols-1 lg:grid-cols-2 gap-8">
         <!-- Left Column (Full Width on Mobile) -->
         <div class="w-full mb-8" data-aos="fade-right">
-          <h2 class="text-3xl font-bold text-orange-300 mb-4">
+          <h2 class="text-3xl font-bold text-[#0c5b91] mb-4">
             Book a complimentary consultation with our experts.
           </h2>
           <p class="text-lg text-black mb-8">
