major style changes for the pages

--- a/about.html
+++ b/about.html
@@ -87,11 +87,9 @@
   <section class="py-20 px-4">
     <div class="container mx-auto max-w-7xl">
       <!-- Mission Statement -->
-      <div class="text-center mb-20" data-aos="fade-up">
-        <h2 class="text-4xl font-bold mb-8 text-orange-500">Our Mission</h2>
-        <p class="text-xl text-gray-800 leading-relaxed max-w-4xl mx-auto">
-          Empowering companies and organizations with visionary technology solutions, driving exponential growth through our dedicated team of passionate engineers and seasoned solution providers.
-        </p>
+      <div class="text-center mb-10" data-aos="fade-up">
+        <h2 class="text-4xl font-bold mb-8 text-orange-500">Our History</h2>
+        
       </div>
 
       <!-- Company Introduction -->
