--- a/careers.html
+++ b/careers.html
@@ -12,7 +12,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-900 text-white">
+<body class="bg-white text-black">
   <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-container container">
@@ -23,12 +23,12 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="home" class="hover:text-orange-500 transition-colors">Home</a></li>
-        <li><a href="about" class="hover:text-orange-500 transition-colors">About</a></li>
-        <li><a href="services" class="hover:text-orange-500 transition-colors">Services</a></li>
-        <li><a href="casestudies" class="hover:text-orange-500 transition-colors">Casestudies</a></li>
-        <li><a href="careers" class="hover:text-orange-500 transition-colors">Careers</a></li>
-        <li><a href="contact" class="hover:text-orange-500 transition-colors">Contact</a></li>
+        <li><a href="home" class="hover:text-orange-400 transition-colors">Home</a></li>
+        <li><a href="about" class="hover:text-orange-400 transition-colors">About</a></li>
+        <li><a href="services" class="hover:text-orange-400 transition-colors">Services</a></li>
+        <li><a href="casestudies" class="hover:text-orange-400 transition-colors">Casestudies</a></li>
+        <li><a href="careers" class="hover:text-orange-400 transition-colors">Careers</a></li>
+        <li><a href="contact" class="hover:text-orange-400 transition-colors">Contact</a></li>
       </ul>
       <a href="home" class="logo">
         <img alt="Company Logo" src="images/logo3.png" />
@@ -37,12 +37,12 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-[60vh] flex items-center justify-center bg-cover bg-center" style="background-image: url('images/careers-hero.jpg');">
-    <div class="absolute inset-0 bg-gradient-to-r from-black via-transparent to-black opacity-70"></div>
+  <section class="relative h-[60vh] flex items-center justify-center bg-contain bg-center mt-16" style="background-image: url('images/main.png');">
+    <div class="absolute inset-0 bg-gray-200 opacity-90"></div>
     <div class="relative z-10 text-center" data-aos="fade-up">
-      <h1 class="text-6xl font-extrabold mb-4 text-white">Careers</h1>
-      <p class="text-2xl text-gray-300">Achieve Your Professional Goals with TekJin</p>
-      <p class="text-xl text-gray-300 mt-4 max-w-3xl mx-auto">At TekJin, we believe in value-based upscaling at the heart of our work environment. From continuous learning to practical implementation, our developers and tech experts stay ahead in their professional game. Join us to embark on a career path that not only challenges you but also inspires you to grow every day.</p>
+      <h1 class="text-6xl font-extrabold mb-4 text-[#0c5b91]">Careers</h1>
+      <p class="text-2xl text-gray-700">Achieve Your Professional Goals with TekJin</p>
+      <p class="text-xl text-gray-700 mt-4 max-w-3xl mx-auto">At TekJin, we believe in value-based upscaling at the heart of our work environment. From continuous learning to practical implementation, our developers and tech experts stay ahead in their professional game. Join us to embark on a career path that not only challenges you but also inspires you to grow every day.</p>
       <button class="mt-8 bg-orange-500 hover:bg-orange-600 text-white px-8 py-4 rounded-full text-lg font-bold transition-all duration-300 transform hover:scale-105">
         Exciting Career Opportunities
       </button>
@@ -50,14 +50,14 @@
   </section>
 
   <!-- Perks Section -->
-  <section class="py-20 px-4">
+  <section class="py-20 px-4 ">
     <div class="container mx-auto max-w-7xl">
-      <h2 class="text-4xl font-bold text-center mb-16">Perks for Joining TekJin</h2>
-      <p class="text-xl text-gray-300 text-center mb-16 max-w-4xl mx-auto">At TekJin, we believe in providing an exceptional work environment that fosters growth, well-being, and innovation. Here's a glimpse of what you can expect when you join our team:</p>
+      <h2 class="text-4xl font-bold text-center mb-16 text-[#0c5b91]">Perks for Joining TekJin</h2>
+      <p class="text-xl text-gray-700 text-center mb-16 max-w-4xl mx-auto">At TekJin, we believe in providing an exceptional work environment that fosters growth, well-being, and innovation. Here's a glimpse of what you can expect when you join our team:</p>
       
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Flexible Work -->
-        <div class="bg-gray-800 p-8 rounded-lg" data-aos="fade-up">
+        <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200" data-aos="fade-up">
           <i class="fas fa-clock text-4xl text-orange-500 mb-4"></i>
           <h3 class="text-2xl font-bold mb-4">Flexible Work Scheduling</h3>
           <ul class="space-y-4">
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Professional Growth -->
-        <div class="bg-gray-800 p-8 rounded-lg" data-aos="fade-up" data-aos-delay="200">
+        <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200" data-aos="fade-up" data-aos-delay="200">
           <i class="fas fa-graduation-cap text-4xl text-orange-500 mb-4"></i>
           <h3 class="text-2xl font-bold mb-4">Professional Growth</h3>
           <ul class="space-y-4">
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Health and Wellness -->
-        <div class="bg-gray-800 p-8 rounded-lg" data-aos="fade-up" data-aos-delay="400">
+        <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200" data-aos="fade-up" data-aos-delay="400">
           <i class="fas fa-heart text-4xl text-orange-500 mb-4"></i>
           <h3 class="text-2xl font-bold mb-4">Health and Wellness</h3>
           <ul class="space-y-4">
@@ -108,9 +108,9 @@
   </section>
 
   <!-- Hiring Process -->
-  <section class="py-20 px-4 bg-gray-800">
+  <section class="py-20 px-4 bg-gray-100">
     <div class="container mx-auto max-w-7xl">
-      <h2 class="text-4xl font-bold text-center mb-16">Your Path to Joining TekJin</h2>
+      <h2 class="text-4xl font-bold text-center mb-16 text-[#0c5b91]">Your Path to Joining TekJin</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
         <!-- Step 1 -->
         <div class="text-center" data-aos="fade-up">
@@ -118,7 +118,7 @@
             <i class="fas fa-file-alt text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">Submit Your Application</h3>
-          <p class="text-gray-300">Begin your journey by discovering our current openings and submitting your application</p>
+          <p class="text-gray-700">Begin your journey by discovering our current openings and submitting your application</p>
         </div>
 
         <!-- Step 2 -->
@@ -127,7 +127,7 @@
             <i class="fas fa-search text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">Comprehensive Review</h3>
-          <p class="text-gray-300">Our recruitment team thoroughly reviews every application with attention to detail</p>
+          <p class="text-gray-700">Our recruitment team thoroughly reviews every application with attention to detail</p>
         </div>
 
         <!-- Step 3 -->
@@ -136,7 +136,7 @@
             <i class="fas fa-comments text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">Personal Interview</h3>
-          <p class="text-gray-300">Connect with our team to discuss your experiences, skills, and career goals</p>
+          <p class="text-gray-700">Connect with our team to discuss your experiences, skills, and career goals</p>
         </div>
 
         <!-- Step 4 -->
@@ -145,16 +145,16 @@
             <i class="fas fa-handshake text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">Welcome Onboard</h3>
-          <p class="text-gray-300">Join the TekJin family and begin your exciting new chapter with us</p>
+          <p class="text-gray-700">Join the TekJin family and begin your exciting new chapter with us</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- CTA Section -->
-  <section class="py-20 px-4">
+  <section class="py-20 px-4 ">
     <div class="container mx-auto max-w-4xl text-center">
-      <h2 class="text-3xl font-bold mb-8">Discover Your Next Great Opportunity</h2>
+      <h2 class="text-3xl font-bold mb-8 text-[#0c5b91]">Discover Your Next Great Opportunity</h2>
       <a href="https://www.linkedin.com/company/tekjin/jobs/" class="inline-block bg-orange-500 hover:bg-orange-600 text-white px-8 py-4 rounded-full text-lg font-bold transition-all duration-300 transform hover:scale-105">
         Explore Opportunities
       </a>
