--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-900 text-white">
+<body class="bg-white text-black">
   <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-container container">
@@ -23,71 +23,71 @@
         <span class="line line3"></span>
       </div>
       <ul class="menu-items">
-        <li><a href="banner">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="services">Services</a></li>
-        <li><a href="casestudies">Casestudies</a></li>
-        <li><a href="careers">Careers</a></li>
-        <li><a href="contact">Contact</a></li>
+        <li><a href="home" class="hover:text-orange-400 transition-colors">Home</a></li>
+        <li><a href="about" class="hover:text-orange-400 transition-colors">About</a></li>
+        <li><a href="services" class="hover:text-orange-400 transition-colors">Services</a></li>
+        <li><a href="casestudies" class="hover:text-orange-400 transition-colors">Casestudies</a></li>
+        <li><a href="careers" class="hover:text-orange-400 transition-colors">Careers</a></li>
+        <li><a href="contact" class="hover:text-orange-400 transition-colors">Contact</a></li>
       </ul>
-      <a href="banner1" class="logo">
+      <a href="home" class="logo">
         <img alt="Company Logo" src="images/logo3.png" />
       </a>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-[60vh] flex items-center justify-center bg-cover bg-center" style="background-image: url('images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg');">
-    <div class="absolute inset-0 bg-gradient-to-r from-black via-transparent to-black opacity-70"></div>
+  <section class="relative h-[60vh] flex items-center justify-center bg-contain bg-center mt-16" style="background-image: url('images/main.png');">
+    <div class="absolute inset-0 bg-gray-200 opacity-90"></div>
     <div class="relative z-10 text-center" data-aos="fade-up">
-      <h1 class="text-6xl font-extrabold mb-4 text-white">Contact Us</h1>
-      <p class="text-2xl text-gray-300">Let's discuss how we can help transform your business</p>
+      <h1 class="text-6xl font-extrabold mb-4 text-[#0c5b91]">Contact Us</h1>
+      <p class="text-2xl text-gray-700">Let's discuss how we can help transform your business</p>
     </div>
   </section>
 
   <!-- Contact Form Section -->
-  <section class="py-20 px-4 bg-gray-900">
+  <section class="py-20 px-4">
     <div class="container mx-auto max-w-7xl">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
         <!-- Contact Information -->
         <div class="space-y-8" data-aos="fade-right">
-          <div class="bg-gray-800 p-10 rounded-xl shadow-lg hover:shadow-orange-500/20 transition-all duration-300">
+          <div class="bg-white p-10 rounded-xl shadow-lg hover:shadow-orange-500/20 transition-all duration-300">
             <h2 class="text-4xl font-bold mb-6 text-orange-500">Get in Touch</h2>
             <div class="space-y-6">
               <div class="flex items-center space-x-4">
                 <i class="fas fa-map-marker-alt text-orange-500 text-2xl"></i>
-                <p class="text-lg">123 Business Street, Tech City, TC 12345</p>
+                <p class="text-lg text-gray-700">123 Business Street, Tech City, TC 12345</p>
               </div>
               <div class="flex items-center space-x-4">
                 <i class="fas fa-phone text-orange-500 text-2xl"></i>
-                <p class="text-lg">+1 (555) 123-4567</p>
+                <p class="text-lg text-gray-700">+1 (555) 123-4567</p>
               </div>
               <div class="flex items-center space-x-4">
                 <i class="fas fa-envelope text-orange-500 text-2xl"></i>
-                <p class="text-lg">contact@tekjin.com</p>
+                <p class="text-lg text-gray-700">contact@tekjin.com</p>
               </div>
             </div>
           </div>
         </div>
 
         <!-- Contact Form -->
-        <div class="bg-gray-800 p-10 rounded-xl shadow-lg hover:shadow-orange-500/20 transition-all duration-300" data-aos="fade-left">
+        <div class="bg-white p-10 rounded-xl shadow-lg hover:shadow-orange-500/20 transition-all duration-300" data-aos="fade-left">
           <form class="space-y-6">
             <div>
-              <label class="block text-sm font-medium mb-2 text-gray-300">Name</label>
-              <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
+              <label class="block text-sm font-medium mb-2 text-gray-700">Name</label>
+              <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-100 border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
             </div>
             <div>
-              <label class="block text-sm font-medium mb-2 text-gray-300">Email</label>
-              <input type="email" class="w-full px-4 py-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
+              <label class="block text-sm font-medium mb-2 text-gray-700">Email</label>
+              <input type="email" class="w-full px-4 py-3 rounded-lg bg-gray-100 border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
             </div>
             <div>
-              <label class="block text-sm font-medium mb-2 text-gray-300">Subject</label>
-              <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
+              <label class="block text-sm font-medium mb-2 text-gray-700">Subject</label>
+              <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-100 border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300">
             </div>
             <div>
-              <label class="block text-sm font-medium mb-2 text-gray-300">Message</label>
-              <textarea rows="5" class="w-full px-4 py-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300"></textarea>
+              <label class="block text-sm font-medium mb-2 text-gray-700">Message</label>
+              <textarea rows="5" class="w-full px-4 py-3 rounded-lg bg-gray-100 border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-500 transition-all duration-300"></textarea>
             </div>
             <button type="submit" class="w-full bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white font-bold py-3 px-6 rounded-lg transition-all duration-300 transform hover:scale-105">
               Send Message
